cmake_minimum_required(VERSION 3.10)
project(client)
# set(CMAKE_THREAD_LIBS_INIT "-lpthread")
# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread ")
include_directories("include")
#add_executable(${PROJECT_NAME} main.cpp src/client.cpp src/exeception.cpp src/json.c src/parser.cpp)
add_library(${PROJECT_NAME} SHARED src/client.cpp src/exeception.cpp src/json.c src/parser.cpp)
target_link_libraries(${PROJECT_NAME} -lm -pthread)